Removed leftover from wrong idea to fix dark mode CSS

--- a/src/esl_facebook_client/app/css/main.css
+++ b/src/esl_facebook_client/app/css/main.css
@@ -250,17 +250,6 @@ a:hover {
 
 
 /****************************
-        DARK MODE
-*****************************/
-
-.nav-tabs > li.active > a,
-.nav-tabs > li.active > a:hover,
-.nav-tabs > li.active > a:focus {
-
-}
-
-
-/****************************
         STATS PANELS
 *****************************/
 
